# comp_vision

./: .gitignore  README.md  pyproject.toml
Labs/Lab_01/: kerasAPI_demo_1.py  kerasAPI_demo_2.py  (+12 more)
movenet_webcam/: pose_classification_only.py  pyproject.toml  weights.best.hdf5
movenet_webcam/examples/lite/examples/pose_estimation/ios/: Podfile  README.md
movenet_webcam/examples/lite/examples/pose_estimation/ios/PoseEstimation/: Info.plist
movenet_webcam/examples/lite/examples/pose_estimation/ios/PoseEstimation/Camera/: CameraFeedManager.swift
movenet_webcam/examples/lite/examples/pose_estimation/raspberry_pi/: data.py  pose_estimation.py  utils.py  visualizer.py
movenet_webcam/examples/lite/examples/pose_estimation/raspberry_pi/ml/: classifier.py  classifier_test.py  movenet.py  movenet_multipose.py  movenet_multipose_test.py  movenet_test.py  posenet.py  posenet_test.py
movenet_webcam/examples/lite/examples/pose_estimation/raspberry_pi/tracker/: bounding_box_tracker.py  bounding_box_tracker_test.py  config.py  keypoint_tracker.py  keypoint_tracker_test.py  tracker.py
movenet_webcam/examples/lite/examples/posenet/android/: build.gradle
movenet_webcam/examples/lite/examples/posenet/android/posenet/: build.gradle
movenet_webcam/examples/lite/examples/posenet/ios/: .gitignore  Podfile  README.md
movenet_webcam/examples/lite/examples/posenet/ios/PoseNet/: Constants.swift
movenet_webcam/examples/lite/examples/posenet/ios/PoseNet/Camera Feed/: CameraFeedManager.swift
movenet_webcam/examples/lite/examples/posenet/ios/RunScripts/: download_models.sh
(+82 files in other folders)
