[tool.poetry]
name = "movenet_webcam"
version = "0.1.0"
description = ""
authors = ["Maciej Trątnowiecki <mtratnowiecki@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
tensorflow = "^2.10.0"
numpy = "^1.23.4"
sklearn = "^0.0"
pandas = "^1.5.1"
opencv-python = "^4.6.0"
tqdm = "^4.64.1"
matplotlib = "^3.6.1"
tensorflow-hub = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
